Fatla el contacto

--- a/Elcafe.html
+++ b/Elcafe.html
@@ -10,6 +10,8 @@
 <body>
     <header>
         <h1 class="Elcafe"> El cafe</h1>
+
+        <p class="opinion">Cafe Las Horas  ha sido pensado para convertirse en un lugar tranquilo, relajado  y discreto. Precisamente por ello, se ha confiado el proyecto a la esposa de Romain Fornell, Emma, que ha conseguido crear un ambiente muy acogedor, donde el cliente se siente como en casa. Un espacio calido y cofortable pensado para personas de bhuen paladar pero que disponen pero que disponen, a veces, de poco tiempo para disfrutar de una cocina donde la calidad  y esencia del producto son imprescindibles.</p>
     </header>
 </body>
 </html>
