--- a/lacarta.html
+++ b/lacarta.html
@@ -10,6 +10,15 @@
 <body>
     <header> 
         <h1 class="Lacarta">La Carta</h1>
+        
+
+        <h3 class="marrones"> El << PANIER >> CON UN SENTIDO DE BOLLERIA, MANTEQUILLA Y MERMELADA 3,80€ </h3>
+        <hr>
+        <h3 class="marrones">TARTINES A LA FRANCESA; PAN FRESCO CON MANTEQUILLA Y MERMELADA 2€</h3>
+        <hr>
+        <h3 class="marrones">NAPOLITANA 1,20€</h3>
+        <hr>
+        <h3 class="marrones">CROISSANT DE MANTEQUILLA 1€</h3>
         <hr>
     </header>
     
