--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <h3 class="cafe">  <a href="Elcafe.html">El cafe <img src="img/cafe.png " alt="El cafe"  width="140"   height="160"> </a></h3>
 
 
-        <h3 class="contacto">Contacto <img src="img/CONTACTO.png" alt="Contacto" width="140"  height="160"></h3>
+        <h3 class="contacto"> <a href="Elcontacto.html"> Contacto <img src="img/CONTACTO.png" alt="Contacto" width="140"  height="160"></a></h3>
 </section>
 
     
