--- a/lacarta.html
+++ b/lacarta.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La carta</title>
+    <title>Practica 3.10</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header> 
-        <h1 class="Lacarta">La Carta</h1>
-        
 
-        <h3 class="marrones"> El << PANIER >> CON UN SENTIDO DE BOLLERIA, MANTEQUILLA Y MERMELADA 3,80€ </h3>
-        <hr>
-        <h3 class="marrones">TARTINES A LA FRANCESA; PAN FRESCO CON MANTEQUILLA Y MERMELADA 2€</h3>
-        <hr>
-        <h3 class="marrones">NAPOLITANA 1,20€</h3>
-        <hr>
-        <h3 class="marrones">CROISSANT DE MANTEQUILLA 1€</h3>
-        <hr>
-    </header>
-    
+    <h1> LA CARTA</h1>
+    <hr>
+
+    <h2>Menu diario</h2>
+<!--Primer Plato -->
+    <ul style="list-style-type: circle;">
+        <li>Primer plato</li>
+            <ol>
+                <li>Arroz al horno</li>
+                <li>Paella</li>
+                <li>Fideua</li>
+                    <ol type="I">
+                        <li>De Gandia</li>
+                        <li>De boletus</li>
+
+
+                    </ol>
+
+            </ol>
+
+    </ul>
+
+    <!--Segundo Plato -->
+<ul style="list-style-type: circle;">
+    <li>Segundo Plato </li>
+        <ol type="a">
+            <li>Lomo a la valenciana</li>
+            <li>Lenguado</li>
+            <li>Entrecot en su salsa</li>
+        </ol>
+
+
+
+</ul>
+
+<!--Postre o cafe-->
+<ul style="list-style-type: circle;">
+<lI>Postre o cafe</lI>
+
+</ul>
+   
 </body>
 </html>
